Fixed coins so the table isn't cut off

--- a/Coins/coins.css
+++ b/Coins/coins.css
@@ -53,5 +53,5 @@ tbody>tr>td:first-child {text-align:right;}
 #topmatter {position:fixed; top:0; left:0; width:100%;background-color:var(--bg-color);}
 #topmatter>div {margin-left:15px;}
 
-body {margin-top: 270px;
+body {margin-top: 285px; /*So the bottom can scroll*/
       margin-left: 10px;}
